test/files/neg/t3236-neg/StringAnnotation.java
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;

@Retention(RetentionPolicy.RUNTIME)
public @interface StringAnnotation {
    String value();
}
